--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,13 @@
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
 body, html {
   margin: 0;
   padding: 0;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(24, 24, 24);
   font-family: SwitchUI;
   color: rgb(0, 179, 255);
 }
@@ -116,7 +118,9 @@ body {
 }
 
 .switch2-screen-content {
-  padding: 20px;
+  padding-left: 2%;
+  padding-bottom: 2%;
+  padding-top: 2%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -145,6 +149,14 @@ body {
   align-items: center;
   z-index: 10;
   will-change: transform;
+}
+
+.screen-content {
+  display: flex;
+  flex-direction: column;
+  gap: 10%;
+  width: 43vw;
+  height: 40vw;
 }
 
 .unlocked {
@@ -197,10 +209,23 @@ body {
     transform: translateX(0);
 }
 
+.screen-header {
+  font-size: 1vw;
+  width: 95%;
+  display: flex;
+  justify-content: flex-end;
+  p {
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+  }
+}
+
 .block-wrapper {
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: .5%;
 }
 
 .block-content-wrapper {
@@ -211,7 +236,7 @@ body {
   flex-shrink: 0;
   p {
     position: absolute;
-    top: -3vh;
+    top: -1.25vw;
     white-space: nowrap;
     color: #5ddcff;
     opacity: 0;
@@ -291,15 +316,29 @@ body {
   cursor: pointer;
 }
 
+.game-click {
+  animation-name: game-click;
+  animation-duration: .2s;
+}
+
+@keyframes game-click {
+  0% { scale: 1; }
+  50% { scale: 0.96; }
+  100% { scale: 1; }
+}
+
 @keyframes spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
 
 .settings-wrapper {
-  width: 100%;
+  width: 82%;
   display: flex;
   justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  margin-right: 13%;
 }
 
 .settings-bar {
@@ -308,8 +347,9 @@ body {
   align-items: center;
   background-color: rgb(34, 34, 34);
   border-radius: 30px;
-  padding: 8px;
-  gap: 10px;
+  width: 100%;
+  padding: 1%;
+  gap: .5%;
 }
 
 .settings-options {
@@ -323,6 +363,7 @@ body {
   align-items: center;
   justify-content: center;
   color: white;
+  font-size: clamp(0.25rem, -0.3125rem + 1.5vw, 1rem);
 }
 
 .settings-options:hover {
