--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,9 @@ body, html {
   background-color: rgb(24, 24, 24);
   font-family: SwitchUI;
   color: rgb(0, 179, 255);
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none;      /* Internet Explorer/Edge */
+  user-select: none;          /* Standaard (Chrome, Firefox, Opera) */
 }
 
 @font-face {
@@ -63,7 +66,7 @@ body {
   transform-box: fill-box;
   translate: 0 0;
   rotate: 0deg;
-  transition: translate 0.3s ease-in-out, rotate 0.3s ease-in-out;
+  transition: translate 0.4s ease-in-out, rotate 0.4s ease-in-out;
 
   animation: 
     screen-float 3s ease-in-out infinite,
@@ -109,9 +112,9 @@ body {
   0% {
     scale: 1;
   }
-  50% {
+  /* 50% {
     scale: 1.05;
-  }
+  } */
   100% {
     scale: 1;
   }
@@ -130,10 +133,8 @@ body {
   display: flex;
   overflow: hidden;
   flex-direction: column;
-  
   align-items: flex-start;
   justify-content: center;
-  
   gap: 20px;
 }
 
@@ -149,6 +150,7 @@ body {
   align-items: center;
   z-index: 10;
   will-change: transform;
+  transition: all .2s;
 }
 
 .screen-content {
@@ -166,9 +168,22 @@ body {
 }
 
 .tablet-unlocked {
-  animation: unlockTablet 4s ease-out;
+  animation: unlockTablet 4s ease-out 2s forwards;
+}
+
+.tablet-unlocked-click {
+  animation-name: unlockTabletClick;
+  animation-duration: 0.6s;
+  animation-iteration-count: 1;
+  animation-delay: 0.4s;
+  animation-timing-function: cubic-bezier(.39,.01,0,.67);
   animation-fill-mode: forwards;
-  animation-delay: 2s;
+}
+
+@keyframes unlockTabletClick {
+  0% { transform: translateY(0px); }
+  50% { transform: translateY(-70px); }
+  100% { transform: translateY(0px); }
 }
 
 .console-unlocked {
@@ -195,12 +210,12 @@ body {
 }
 
 #Left-Joycon {
-    transition: transform 0.4s linear;
+    transition: transform 0.4s cubic-bezier(1,.01,1,1);
     transform: translateX(-2000px); 
 }
 
 #Right-Joycon {
-    transition: transform 0.4s linear;
+    transition: transform 0.4s cubic-bezier(1,.01,1,1);
     transform: translateX(2000px); 
 }
 
@@ -219,6 +234,7 @@ body {
     font-weight: bold;
     margin: 0;
     padding: 0;
+    letter-spacing: .15vw;
   }
 }
 
@@ -265,7 +281,7 @@ body {
   width: 10.3vw;
   height: 10.3vw;
   aspect-ratio: 1 / 1;
-  border-radius: 1vw;
+  border-radius: .7vw;
   position: relative;
   display: flex;
   justify-content: center;
@@ -276,10 +292,25 @@ body {
 .block-border::before {
   content: "";
   position: absolute;
-  width: 17vw;
-  height: 17vw;
-  background-image: linear-gradient(#5ddcff, #3c67e3 43%, #4e00c2);
-  animation: spin 3s linear infinite;
+  width: 14vw;
+  height: 14vw;
+  background-image: linear-gradient(
+    90deg,
+    hsl(259deg 100% 69%) 0%,
+    hsl(265deg 98% 75%) 8%,
+    hsl(270deg 97% 80%) 17%,
+    hsl(275deg 96% 86%) 25%,
+    hsl(279deg 100% 93%) 33%,
+    hsl(257deg 100% 90%) 42%,
+    hsl(234deg 100% 86%) 50%,
+    hsl(217deg 100% 76%) 58%,
+    hsl(204deg 100% 59%) 67%,
+    hsl(205deg 100% 67%) 75%,
+    hsl(205deg 100% 72%) 83%,
+    hsl(205deg 100% 78%) 92%,
+    hsl(204deg 100% 83%) 100%
+  );
+  animation: spin 5s linear infinite;
   opacity: 0;
   transition: opacity 0.1s ease;
 }
@@ -295,8 +326,8 @@ body {
   color: white;
   display: flex;
   justify-content: center;
-  border-radius: inherit;
   align-items: center;
+  border-radius: .7vw;
   z-index: 1;
   overflow: hidden;
   img {
@@ -304,7 +335,7 @@ body {
     height: 97%;
     aspect-ratio: 1 / 1;
     object-fit: cover; 
-    border-radius: inherit; 
+    border-radius: .7vw;
   }
 }
 
@@ -338,7 +369,7 @@ body {
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  margin-right: 13%;
+  margin-right: 11%;
 }
 
 .settings-bar {
@@ -346,7 +377,7 @@ body {
   flex-direction: row;
   align-items: center;
   background-color: rgb(34, 34, 34);
-  border-radius: 30px;
+  border-radius: 40px;
   width: 100%;
   padding: 1%;
   gap: .5%;
@@ -358,17 +389,83 @@ body {
   width: 3vw;
   height: 3vw;
   border-radius: 100%;
-  background-color: rgb(46, 46, 46);
+  background-color: rgb(34, 34, 34);
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: box-shadow 0.2s ease;
   color: white;
   font-size: clamp(0.25rem, -0.3125rem + 1.5vw, 1rem);
+  transition: all .2s;
+  img {
+    height: 47%;
+  }
+
+  &.nx-online {
+    background-color: #e40013 !important;
+  }
+
+  &.eshop {
+    img {
+      margin-top: -5%;
+    }
+  }
+
+  &.album {
+    img {
+      height: 38% !important;
+    }
+  }
+
+  &.gameshare {
+    img {
+      height: 44% !important;
+      margin-top: -5%;
+    }
+  }
+
+  &.controller {
+    img {
+      height: 55% !important;
+    }
+  }
+
+  &.virtualcards {
+    img {
+      height: 52% !important;
+    }
+  }
+
+  &.settings {
+    img {
+      height: 57% !important;
+    }
+  }
+
+  &.power {
+    img {
+      height: 57% !important;
+    }
+  }
+}
+
+.settings-options::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: radial-gradient(circle, var(--glow-color) 0%, rgba(255, 255, 255, 0) 75%);
+    opacity: 0;
+    z-index: 1;
+    transition: opacity 0.2s ease;
+    border-radius: 50%;
 }
 
 .settings-options:hover {
   cursor: pointer;
-  background-color: rgb(32, 38, 49);
+  background-color: rgb(45, 45, 45);
 }
 
 .settings-border {
@@ -389,8 +486,23 @@ body {
   height: 100%;
   top: 0;
   left: 0;
-  background-image: linear-gradient(#5ddcff, #3c67e3 43%, #4e00c2);
-  animation: spin 3s linear infinite;
+    background-image: linear-gradient(
+    90deg,
+    hsl(259deg 100% 69%) 0%,
+    hsl(265deg 98% 75%) 8%,
+    hsl(270deg 97% 80%) 17%,
+    hsl(275deg 96% 86%) 25%,
+    hsl(279deg 100% 93%) 33%,
+    hsl(257deg 100% 90%) 42%,
+    hsl(234deg 100% 86%) 50%,
+    hsl(217deg 100% 76%) 58%,
+    hsl(204deg 100% 59%) 67%,
+    hsl(205deg 100% 67%) 75%,
+    hsl(205deg 100% 72%) 83%,
+    hsl(205deg 100% 78%) 92%,
+    hsl(204deg 100% 83%) 100%
+  );
+  animation: spin 5s linear infinite;
   opacity: 0;
   transition: opacity 0.1s ease;
   transform: scale(1.1); 
@@ -431,4 +543,52 @@ body {
 
 .vc-active {
   fill: rgb(255, 153, 0) !important;
+}
+
+/* Settings Buttons Animaties */
+
+.setting-default-click {
+  animation: default-click .3s ease-in-out 1 forwards;
+}
+
+@keyframes default-click {
+  0% { scale: 1; }
+  50% { scale: 0.9; }
+  100% { scale: 1; }
+}
+
+.settings-icn-rotate {
+  animation: settings-cog .3s ease-out 1 forwards;
+}
+
+@keyframes settings-cog {
+  0% { transform: rotateZ(0deg); }
+  100% { transform: rotateZ(180deg); }
+}
+
+.settings-options.inner-glow-pulse::before {
+    animation: inner-pulse 0.3s ease-out;
+}
+
+.nx-online { --glow-color: rgba(255, 126, 126, 0.9); }
+.eshop { --glow-color: rgba(255, 92, 60, 0.9); }
+.gamechat { --glow-color: rgba(255, 77, 0, 0.9); }
+.news { --glow-color: rgba(81, 224, 95, 0.9); }
+.album { --glow-color: rgba(51, 122, 230, 0.9); }
+.gameshare { --glow-color: rgba(121, 214, 254, 0.9); }
+.controller, .virtualcards, .power, .settings { --glow-color: rgba(150, 150, 150, 0.9); }
+
+@keyframes inner-pulse {
+    0% {
+        opacity: 0;
+        transform: scale(0.5);
+    }
+    50% {
+        opacity: .45;
+        transform: scale(1.1);
+    }
+    100% {
+        opacity: 0;
+        transform: scale(1.2);
+    }
 }
