--- a/views/index.liquid
+++ b/views/index.liquid
@@ -152,6 +152,14 @@
 
   <div class="screen-content">
 
+    <div class="screen-overlay">
+      <div class="overlay-content">
+        Hoi! Dit is een test voor de komende blokken van mijn profiel
+        <img width="40%" src="1154962416241746010.webp">
+      </div>
+      <img class="closeBtn" src="img/close.png">
+    </div>
+
     <div class="screen-header">
       <p>{{ "now" | date: "%H:%M" }}</p>
     </div>
@@ -160,7 +168,7 @@
 
       <div class="block-content-wrapper">
         <p class="block-title">Mario Kart World</p>
-        <div class="block-border">
+        <div class="block-border MKWorld">
           <div class="block-content">
             <img src="img/icon_testing/mkworld.jpg" alt="">
           </div>
