--- a/public/style.css
+++ b/public/style.css
@@ -10,9 +10,9 @@ body, html {
   background-color: rgb(24, 24, 24);
   font-family: SwitchUI;
   color: rgb(0, 179, 255);
-  /* -webkit-user-select: none;
+  -webkit-user-select: none;
   -ms-user-select: none;
-  user-select: none; */
+  user-select: none;
 }
 
 @font-face {
@@ -52,6 +52,10 @@ body {
   0% { opacity: 1; }
   50% { opacity: 1; }
   100% { opacity: 0; }
+}
+
+.no-interaction {
+    pointer-events: none !important;
 }
 
 .Switch2 {
@@ -161,7 +165,8 @@ body {
   height: 40vw;
 }
 
-.screen-overlay {
+.about-overlay,
+.fav-game-overlay {
   position: fixed;
   display: flex;
   align-self: center;
@@ -171,13 +176,14 @@ body {
   right: 8%;
   border-radius: 15px;
   padding: 2%;
-  background-color: rgb(26, 26, 26);
+  background-color: rgb(43, 43, 43);
   z-index: 9;
   flex-direction: row;
-  gap: 20px;
+  gap: 3%;
   opacity: 0;
   scale: 0;
   pointer-events: none;
+  color: white;
   transition: all .2s ease-in-out;
 
   img {
@@ -198,8 +204,20 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 10px;
   font-size: 1vw;
+  video {
+    display: flex;
+    align-self: center;
+  }
+}
+
+.aboutme {
+  display: flex;
+  flex-direction: row;
+  gap: 5%;
+  p {
+    font-size: .7vw;
+  }
 }
 
 img.closeBtn:hover {
@@ -207,7 +225,13 @@ img.closeBtn:hover {
   scale: 0.9;
 }
 
-.screen-overlay.is-active {
+.about-overlay.is-active {
+  opacity: 1;
+  scale: 1;
+  pointer-events: auto;
+}
+
+.fav-game-overlay.is-active {
   opacity: 1;
   scale: 1;
   pointer-events: auto;
@@ -387,7 +411,7 @@ img.closeBtn:hover {
     height: 97%;
     aspect-ratio: 1 / 1;
     object-fit: cover; 
-    border-radius: .7vw;
+    border-radius: .6vw;
   }
 }
 
