--- a/public/style.css
+++ b/public/style.css
@@ -184,11 +184,13 @@ body {
   scale: 0;
   pointer-events: none;
   color: white;
+  box-shadow: 0px 0px 20px 7px #000000;
   transition: all .2s ease-in-out;
 
   img {
     display: flex;
     justify-self: flex-end;
+    border-radius: .5vw;
 
     &.closeBtn {
       width: 1.5vw;
