--- a/public/style.css
+++ b/public/style.css
@@ -166,7 +166,8 @@ body {
 }
 
 .about-overlay,
-.fav-game-overlay {
+.fav-game-overlay,
+.extra-games-overlay {
   position: fixed;
   display: flex;
   align-self: center;
@@ -196,7 +197,7 @@ body {
       width: 1.5vw;
       height: 1.5vw;
       aspect-ratio: 1 / 1;
-      transition: all .2s;
+      transition: all .1s;
     }
   }
 }
@@ -222,18 +223,33 @@ body {
   }
 }
 
+.extra-games-wrapper {
+  display: flex;
+  flex-direction: row;
+  gap: 2%;
+}
+
+.extra-games {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-weight: bold;
+  gap: 2%;
+  p {
+    font-size: .7vw;
+  }
+}
+
 img.closeBtn:hover {
   cursor: pointer;
   scale: 0.9;
 }
 
-.about-overlay.is-active {
-  opacity: 1;
-  scale: 1;
-  pointer-events: auto;
-}
-
-.fav-game-overlay.is-active {
+.about-overlay.is-active,
+.fav-game-overlay.is-active,
+.extra-games-overlay.is-active {
   opacity: 1;
   scale: 1;
   pointer-events: auto;
