--- a/views/index.liquid
+++ b/views/index.liquid
@@ -157,20 +157,49 @@
         <p>{{ person.name }}</p>
         <div class="aboutme">
           <p>Mijn naam is Tom, ik ben 20 jaar en ik woon in Heemskerk. Ik vind het leuk om te gamen en om met vrienden af te spreken. <br><br>Als vooropleiding deed ik Software Development op het Talland College in Zaandam, het designen van websites vond ik zelf altijd het leukste van ICT, vandaar dat ik voor Front-end Design heb gekozen.</p>
-          <img width="30%" src="20250427_145611.jpg">
+          <img width="30%" alt="Tom's Profielfoto" src="20250427_145611.jpg">
         </div>
       </div>
-      <img class="closeBtn" src="img/close.png">
+      <img class="closeBtn" alt="Close" src="img/close.png">
     </div>
 
     <div class="fav-game-overlay">
       <div class="overlay-content">
         <p>{{ person.custom.games.DKBananza.title }}</p>
           <video width="80%" autoplay muted loop>
-            <source src="video/DK_Bananza_Trailer.mp4#t=45" type="video/mp4" />
+            <source src="video/DK_Bananza_Trailer.mp4#t=45" type="video/mp4"/>
           </video>
       </div>
-      <img class="closeBtn" src="img/close.png">
+      <img class="closeBtn" alt="Close" src="img/close.png">
+    </div>
+
+    <div class="extra-games-overlay">
+      <div class="overlay-content">
+        <p>Hier zijn nog wat games die ik ook leuk vind:</p>
+        <div class="extra-games-wrapper">
+          <div class="extra-games">
+            <p>{{ person.custom.games.MKWorld.title }}</p>
+            <img width="95%" src="{{ person.custom.games.MKWorld.image }}">
+          </div>
+
+          <div class="extra-games">
+            <p>{{ person.custom.games.KirbyAirRiders.title }}</p>
+            <img width="95%" src="{{ person.custom.games.KirbyAirRiders.image }}">
+          </div>
+
+          <div class="extra-games">
+            <p>{{ person.custom.games.MK8DX.title }}</p>
+            <img width="95%" src="{{ person.custom.games.MK8DX.image }}">
+          </div>
+
+          <div class="extra-games">
+            <p>{{ person.custom.games.SMO.title }}</p>
+            <img width="95%" src="{{ person.custom.games.SMO.image }}">
+          </div>
+        </div>
+        <p>Zoals je kan zien ben ik fan van Nintendo games! Ik ben meer een console gamer dan een PC gamer 😀.</p>
+      </div>
+      <img class="closeBtn" alt="Close" src="img/close.png">
     </div>
 
     <div class="screen-header">
@@ -183,7 +212,7 @@
         <p class="block-title">Wie ben ik?</p>
         <div class="block-border MKWorld">
           <div class="block-content">
-            <img src="{{ person.avatar }}" alt="Tom's Profiel Foto">
+            <img src="{{ person.avatar }}" alt="Tom's Online Profiel Foto">
           </div>
         </div>
       </div>
@@ -199,7 +228,7 @@
 
       <div class="block-content-wrapper">
         <p class="block-title">Meer games die ik ook leuk vind</p>
-        <div class="block-border">
+        <div class="block-border extraGames">
           <div class="block-content">
             <img src="img/icons/Nintendo.png" alt="Meer games">
           </div>
@@ -232,6 +261,8 @@
       </div>
     </div>
   </div>
+</div>
+</div>
 </div>
 
 
